--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
                                 <i class="fa-regular fa-circle-xmark"></i>
                             </button>
                             <ul class="nav-menu nav-menu-centered" id="mobile-menu">
-                                <li><a href="#">Home</a></li>
                                 <li><a href="#about">$MOJI</a></li>
                                 <li><a href="#tokenomics">Mojinomics</a></li>
-                                <li><a href="">Chart</a></li>
-                                <li><a href="">Telegram</a></li>
-                                <li><a href="">Twitter</a></li>
+                                <li><a href="https://dexscreener.com/solana/">Chart</a></li>
+                                <li><a href="https://twitter.com/mojionsolana">Twitter</a></li>
+                                <li><a href="https://t.me/mojionsol">Telegram</a></li>
                             </ul>
                             <img class="header-menu-bg" src="assets/img/menuright.png" alt="After">
                             <!-- Main Menus Wrapper -->
